--- a/Notebook/SaoPauloRealEstate.ipynb
+++ b/Notebook/SaoPauloRealEstate.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "### 1.4 Objetivo\n",
     "\n",
-    "O Objetivo desse estudo é prever o valor dos apartamentos (*Price*) com base nas suas características, facilitando o estabelecendo um "
+    "O Objetivo desse estudo é prever o valor dos apartamentos (*Price*) com base nas suas características, possibilitando a automatização desse processo. A criação de um modelo pode reduzir os custos de cotação realizado por empresas para inferir um valor aos imóveis."
    ]
   },
   {
@@ -4734,19 +4734,11 @@
    "id": "c1c382d4",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f35f8b73",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4760,7 +4752,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
