--- a/Notebook/SaoPauloRealEstate.ipynb
+++ b/Notebook/SaoPauloRealEstate.ipynb
@@ -3862,6 +3862,7 @@
    "source": [
     "#### 3.2.2. District\n",
     "\n",
+    "A variável *district* é uma variável categórica, vamos transformar ela em colunas binárias \n",
     "A Variável District é um pouco mais complexo de transformar em numérica pois a idéia de \"ordem\" pode acabar confundindo o modelo. A principio vamos ordenar os bairros da menor para a maior média de Preço. Para isso usaremos os valores do preço dos imóveis disponíveis para venda\n",
     "\n"
    ]
