--- a/Notebook/SaoPauloRealEstate.ipynb
+++ b/Notebook/SaoPauloRealEstate.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "### 1.2. Conhecendo  o dataset\n",
     "\n",
-    "O Dataset contem cerca de 13000 dados referentes a venda e aluguel de apartamentos na cidade de São Paulo (Brasil). Os dados foram coletados de diversas fontes, principalmente de sites de classificados de imóveis. Todos os dados foram coletados no mês de abril de 2019.\n",
+    "O [Dataset](https://www.kaggle.com/argonalyst/sao-paulo-real-estate-sale-rent-april-2019) contem cerca de 13000 dados referentes a venda e aluguel de apartamentos na cidade de São Paulo (Brasil). Os dados foram coletados de diversas fontes, principalmente de sites de classificados de imóveis. Todos os dados foram coletados no mês de abril de 2019.\n",
     "\n",
     "\n",
     "### 1.3. Principais atributos e seus tipos\n",
@@ -817,7 +817,7 @@
    "source": [
     "### 2.2. Separação da base de teste\n",
     "\n",
-    "Após a limpeza dos dados duplicados e dos valores vazios, vamos começar a análise exploratória. Antes de começar a análisar os dados, vamos criar uma cópia do dataset limpo e dividir a base em dados de treino em teste. Para montar um modelo que seja consistente os dados de testes não devem ser usados para análisar e preparar a base, demo que a divisão deve ser feita anteriormente.\n",
+    "Após a limpeza dos dados duplicados e dos valores vazios, vamos começar a análise exploratória. Antes de começar a análisar os dados, vamos criar uma cópia do dataset limpo e dividir a base em dados de treino em teste. Para montar um modelo que seja consistente os dados de testes não devem ser usados para análisar e preparar a base, de modo que a divisão deve ser feita anteriormente.\n",
     "O parâmetro **Negotiation_Type** define se o imóvel é para *venda* ou *aluguel* e ele afeta muito a variável alvo *Price*. Dessa forma vamos estratificar a amostra nesse parâmetro, garantindo a homogeneidade em relação a esse atributo.\n"
    ]
   },
@@ -1495,7 +1495,7 @@
     "\n",
     "A **Latitude** e **Longitude** possui uma distribuição muito concentrada e alguns valores zerados que podem ser interpretados como falta de informação das variáveis. \n",
     "\n",
-    "**Rooms**, **Toilets**, **Suites** e **Parking** são variáveis que possuem uma moda bem evidente e támbem se assemelham a uma curva assimétrica à esquerda, porém com uma quantidade distinta de valores reduzidas. Os seus valores mínimos e máximos estão dentro do esperado e possíveis."
+    "**Rooms**, **Toilets**, **Suites** e **Parking** são variáveis que possuem uma moda bem evidente e támbem se assemelham a uma curva assimétrica à esquerda, porém com uma quantidade reduzida de valores. Os seus valores mínimos e máximos estão dentro dos valores esperados."
    ]
   },
   {
@@ -3029,7 +3029,7 @@
    "id": "7d572bc1",
    "metadata": {},
    "source": [
-    "Os apartamentos para alugar possuem uma alta correlação com as características internas do imóvel (Tamanho, quartos, banheiros, suites, estacionamentos). O valor do condomínio também possui uma correlação positiva com o preço do imóvel."
+    "Os apartamentos para venda possuem uma alta correlação com as características internas do imóvel (Tamanho, quartos, banheiros, suites, estacionamentos). O valor do condomínio também possui uma correlação positiva com o preço do imóvel."
    ]
   },
   {
@@ -3563,7 +3563,7 @@
     "\n",
     "O preço do imóvel possui uma alta correlação com as características do imóvel e conforme o aumento da quantidade de cômodos e atributos (estacionamento, piscina, mobilia) o preço tende a aumentar. A base de dados possui um atributo fundamental para definir o preço final, se o imóvel está para vender ou alugar. Um atributo bem importante é o bairro onde o imóvel está localizado, possuindo um preço médio diferente dependendo do local. É possível que a divisão da base tenha ocultado algum bairro e quando submetidos a dados não vistos venha ocorrer alguma inconsistência. Vamos tratar essa possibilidade mais a diante\n",
     "\n",
-    "Algumas colunas possuem uma relação menos com os dados. A latitude e longitude são numericamente pouco significante, podendo utilzar a informação do bairro em relação a localização. A coluna Property_Type não oferece nenhuma informação adiconal pois possui um valor único. Por fim, pouco se consegue extrair da informação sobre o imóvel ser novo ou não pois a quantidade de imóveis novos são bem inferiores quando comparadas com usados."
+    "Algumas colunas possuem uma relação menor com os dados. A latitude e longitude são numericamente pouco significante, podendo ser substituida pela informação do bairro em que o imóvel está localizado. A coluna Property_Type não oferece nenhuma informação adiconal pois possui um valor único. Por fim, pouco se consegue extrair da informação sobre o imóvel ser novo ou não pois a quantidade de imóveis novos são bem inferiores quando comparadas com usados."
    ]
   },
   {
@@ -3862,135 +3862,7 @@
    "source": [
     "#### 3.2.2. District\n",
     "\n",
-    "A variável *district* é uma variável categórica, vamos transformar ela em colunas binárias \n",
-    "A Variável District é um pouco mais complexo de transformar em numérica pois a idéia de \"ordem\" pode acabar confundindo o modelo. A principio vamos ordenar os bairros da menor para a maior média de Preço. Para isso usaremos os valores do preço dos imóveis disponíveis para venda\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "36b54ed6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Price</th>\n",
-       "      <th>index</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>District</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Cidade Tiradentes/São Paulo</th>\n",
-       "      <td>7.108696e+04</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pirituba/São Paulo</th>\n",
-       "      <td>7.630083e+04</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Butantã/São Paulo</th>\n",
-       "      <td>8.207736e+04</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Freguesia do Ó/São Paulo</th>\n",
-       "      <td>8.347412e+04</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Brasilândia/São Paulo</th>\n",
-       "      <td>1.010559e+05</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Moema/São Paulo</th>\n",
-       "      <td>7.087001e+05</td>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Brooklin/São Paulo</th>\n",
-       "      <td>7.371282e+05</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Vila Olimpia/São Paulo</th>\n",
-       "      <td>8.263476e+05</td>\n",
-       "      <td>93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Alto de Pinheiros/São Paulo</th>\n",
-       "      <td>1.033665e+06</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Iguatemi/São Paulo</th>\n",
-       "      <td>1.351341e+06</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>96 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    Price  index\n",
-       "District                                        \n",
-       "Cidade Tiradentes/São Paulo  7.108696e+04      0\n",
-       "Pirituba/São Paulo           7.630083e+04      1\n",
-       "Butantã/São Paulo            8.207736e+04      2\n",
-       "Freguesia do Ó/São Paulo     8.347412e+04      3\n",
-       "Brasilândia/São Paulo        1.010559e+05      4\n",
-       "...                                   ...    ...\n",
-       "Moema/São Paulo              7.087001e+05     91\n",
-       "Brooklin/São Paulo           7.371282e+05     92\n",
-       "Vila Olimpia/São Paulo       8.263476e+05     93\n",
-       "Alto de Pinheiros/São Paulo  1.033665e+06     94\n",
-       "Iguatemi/São Paulo           1.351341e+06     95\n",
-       "\n",
-       "[96 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "district = pd.DataFrame(df_prep.groupby('District')[['Price']].mean()).sort_values(by=['Price'])\n",
-    "district['index'] = np.arange(district.shape[0])\n",
-    "district"
+    "A variável *district* é uma variável categórica e vamos fazer o tratamento por meio do *one hot encoding* para transformar em colunas binárias. Essa transformação faz com que cada uma dos valores dessa feature seja transformada em uma coluna binária, onde é preenchida com o valor de **1** o valor verdadeiro e **0** as demais colunas. Para tratar a possibilidade de algum valor de *district* não estar na base de treino e apareça nos testes, vamos usar o parâmetro *handle_unknown = ignore*, de modo que caso isso ocorra, todas as colunas referentes terão o valor **0**.\n"
    ]
   },
   {
@@ -4006,7 +3878,7 @@
     "# one hot encoding by pandas\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "encoder = OneHotEncoder()\n",
+    "encoder = OneHotEncoder(handle_unknown='ignore')\n",
     "df_prep_OHE = encoder.fit_transform(df_prep[['District']])"
    ]
   },
@@ -4098,7 +3970,7 @@
    "id": "cde56aca",
    "metadata": {},
    "source": [
-    "### 3.2. Feature Scaling\n",
+    "### 3.3. Feature Scaling\n",
     "\n",
     "As variáveis númericas possuem dimensões muito diferentes. Desse modo é interessante fazer uma transformação para que as unidades não possuam um intervalo de dados muito distinto. Como vimos na análise exploratória, os atributos **Condo** e **Size** possuem vários outliers. Dessa forma optamos por utilizar o *Z-Score Normalization* para transformar as variáveis."
    ]
@@ -4305,7 +4177,9 @@
    "id": "26a00112-aefa-4c36-84ed-02cffa58b3e2",
    "metadata": {},
    "source": [
-    "### 3.3. Pipeline de pré-processamento"
+    "### 3.4. Pipeline de pré-processamento\n",
+    "\n",
+    "Para facilitar o tratamento dos dados, vamos criar um *Pipeline* que agrupa todas as transformações que fizemos nos dados"
    ]
   },
   {
@@ -4708,26 +4582,6 @@
     "\n",
     "### 4.5. Próximos passos\n",
     "* Estratégias, ideias, sugestões para melhorar o modelo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c772fd0",
-   "metadata": {},
-   "source": [
-    "## Atividades opcionais\n",
-    "\n",
-    "### a) Usar pipelines (scikit-Learn)\n",
-    "\n",
-    "### b) Fine-tuning\n",
-    "\n",
-    "### c) Ensemble methods\n",
-    "\n",
-    "### d) Abordagem de negócio\n",
-    "* Motivação e descrição do problema \n",
-    "* Baseline\n",
-    "* Comparação dos resultados com o baseline\n",
-    "* Conversão dos resultados em medidas de performace para o negócio"
    ]
   },
   {
